<resources>
    <string name="app_name">Cuenta_bancaria</string>

    <!--Main Activity -->
    <string name="title_activity_main">Banco ITECSUR</string>
    <string name="init_sesion_btn">Iniciar sesion</string>
    <string name="register_btn">Registrarse</string>
    <string name="exit_btn">Salir</string>
    <!--Register activity -->
    <string name="title_register_activity">Registrarse</string>
    <string name="holder_acount_name_hint">Ingrese nombre</string>
    <string name="avalible_balance_hint">Ingrese saldo inicial</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Password</string>
    <string name="saving_acount">Ahorrros</string>
    <string name="checking_acount">Corriente</string>
    <string name="title_aconnt_type">Tipo de cuenta</string>
    <string name="save_register_btn">Guardar</string>
    <!--General strings -->
    <string name="description_back_btn">back button</string>

    <!-- Login activity -->
    <string name="title_login_activity">Iniciar sesion</string>
    <string name="login_btn">Iniciar</string>
    <!-- User activity -->
    <string name="acount_number">Cta No:</string>
    <string name="user_name">Usuario::</string>
    <string name="balace">Saldo:</string>
    <string name="acount_type">Cuenta: :</string>

    <!-- Transfer acrivity -->
    <string name="title_transfer">Transferencia: :</string>
    <string name="amount_to_transfer">Cantidad a transferir: :</string>




</resources>