<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        >

        <TextView
            android:id="@+id/title_register"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_register_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/my_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/description_back_btn"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        >
        <EditText
            android:id="@+id/name_editTtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/holder_acount_name_hint"
            style="@style/edit_text"
            />
        <EditText
            android:id="@+id/balance_etitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/avalible_balance_hint"
            android:inputType="numberDecimal"
            style="@style/edit_text"
            />
        <EditText
            android:id="@+id/user_etitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/user_hint"
            style="@style/edit_text"
            />
        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password_hint"
            style="@style/edit_text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aconnt_type"
            android:layout_marginTop="30dp"
            style="@style/subtitle_text"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:checkedButton="@+id/radio_savings">
            <RadioButton
                android:id="@+id/radio_savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving_acount"
                android:layout_marginEnd="10dp"

                />
            <RadioButton
                android:id="@+id/radio_checking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking_acount"
                />
        </RadioGroup>


        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/save_register_btn"
            style="@style/activity_main"
            />

    </LinearLayout>

</LinearLayout>