<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_main"
        android:layout_marginTop="100dp"
        style="@style/title_text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:id="@+id/init_sesion_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_sesion_btn"
            style="@style/activity_main"
            />
        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            style="@style/activity_main"
            />
        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_btn"
            style="@style/activity_main"
            />

</LinearLayout>


</LinearLayout>